# PlotNeuralNet

./: LICENSE  MANIFEST.in  README.md  fix.py  pyproject.toml  setup.py
PlotNeuralNet/: __init__.py
PlotNeuralNet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PlotNeuralNet/Diagrams/: resnet50.py  resnet50.tex  resnet50.tex.bak
PlotNeuralNet/Examples/: __init__.py
PlotNeuralNet/Layers/: Box.sty  __init__.py
PlotNeuralNet/PyCore/: TikzGen.py
PlotNeuralNet/PyExamples/: TestSimple.py  TestSimple.tex  UNet.py  __init__.py
PlotNeuralNet/examples/: __init__.py
PlotNeuralNet/examples/fcn8s/: fcn8.tex
PlotNeuralNet/layers/: __init__.py
PlotNeuralNet/my_project/: myarch.py  myarch.tex  myarch_corrected.tex
PlotNeuralNet/pycore/: __init__.py  blocks.py  tikzeng.py
PlotNeuralNet/pyexamples/: __init__.py  test_simple.py  test_simple.tex  unet.tex
